# grpc-authentication

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.dev.json  config.json  config.prod.json  config_schema.json
config/: Cargo.toml
config/src/: lib.rs
migrations/2021-10-16-000458_create_users/: up.sql
migrations/2021-10-20-012435_create_refresh_tokens/: down.sql  up.sql
proto/: authentication.proto
src/: config_loader.rs  connection_pool_wrapper.rs  di.rs  main.rs  schema.rs
src/models/: refresh_token.rs  user.rs
src/services/: mod.rs  repo_error.rs
src/services/grpc_services/: authentication.rs  helloworld.rs  mod.rs
src/services/interceptors/: access_token_interceptor.rs  mod.rs
src/services/password_hashers/: hasher.rs  mod.rs  scrypt_hasher.rs
src/services/refresh_token_repos/: database_refresh_token_repo.rs  mod.rs  refresh_token_repo.rs
src/services/token_generators/: jwt_access_token_generator.rs  mod.rs  refresh_token_generator.rs
src/services/token_services/: access_token_claims.rs  jwt_token_parameters.rs  mod.rs  refresh_token_claims.rs  token_authenticator.rs
src/services/token_services/token_generators/: access_token_generator.rs  jwt_access_token_generator.rs  jwt_refresh_token_generator.rs  mod.rs
src/services/token_services/token_validators/: access_token_validator.rs  jwt_access_token_validator.rs  jwt_refresh_token_validator.rs  mod.rs  refresh_token_validator.rs
src/services/user_repos/: database_user_repo.rs  mod.rs  user_repo.rs
