[package]
name = "grpc-authentication"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5.2", features = ["tls", "tls-roots", "compression"] }
prost = "^0.8"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "fs"] }
figment = { version = "0.10.6", features = ["json", "env"] }
serde = { version = "1.0.130", features = ["derive"] }
shaku = "0.6.1"
state = { version = "0.5.2", features = ["tls"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
scrypt = "0.8.0"
jwt-simple = "0.10.6"
diesel = { version = "^1.4", features = ["sqlite", "postgres", "r2d2"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost", "compression"] }
