[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.6", features = ["json", "env"] }
serde = { version = "1.0.130", features = ["derive"] }
schemars = "0.8.6"
strum = "0.22"
strum_macros = "0.22"
dotenv = "0.15.0"
serde_json = "1.0.68"
